Import of release onenetd-1.3.tar.gz

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-05-29  Adam Sampson  <azz@gnu.org>
 
+	* onenetd.c: Removed "kill IP options", since it doesn't exist
+	under Solaris.
+
 	* onenetd.c: Added escape characters in response string.
 
 2002-05-29  Adam Sampson  <azz@gnu.org>
