--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-08-06  Adam Sampson  <azz@gnu.org>
+
+	* onenetd.c: Removed obsolete -o and -d from getopt args. Added -e to
+	redirect stderr of child to socket.
+	* onenetd.1: Wrote manual page.
+
 2002-08-05  Adam Sampson  <azz@gnu.org>
 
 	* onenetd.c: Fixed bug where onenetd wouldn't accept any connections
