Don't immediately close the child FD on refusal either.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 2005-01-27  Adam Sampson  <azz@us-lot.org>
 
 	* onenetd.c: Update the list of connected clients correctly;
-	previously clients weren't being added to the list at all.
+	previously clients weren't being added to the list at all, so
+	memory would be leaked if the refusal message wasn't accepted
+	immediately, and the child FD would be closed immediately
+	anyway.
 
 2003-06-17  Adam Sampson  <azz@us-lot.org>
 
