--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,6 @@
 (This only includes features; for bugfixes, see ChangeLog.)
 
+1.11: No functional changes.
 1.10: No functional changes.
 1.9: No functional changes.
 1.8: Add -e and manual page.
