Use getsockname() to get the local address to put in TCPLOCALIP, rather than just using the listen address; this means that TCPLOCALIP will be set to the address of the interface the client connected to.
Check that accept() returned a valid address.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,12 @@
 2005-03-07  Adam Sampson  <azz@us-lot.org>
 
+	* onenetd.c: Use getsockname() to get the local address to put in
+	TCPLOCALIP, rather than just using the listen address; this means
+	that TCPLOCALIP will be set to the address of the interface the
+	client connected to.
+
+	* onenetd.c: Check that accept() returned a valid address.
+	
 	* onenetd.c: Catch a (harmless) out-of-memory crash while parsing
 	options (reported by Ulf Härnhammar).
 
