--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,7 @@
 1.12:
 
+Make onenetd work on platforms like ARM where char is unsigned.
+
 (This only includes features; for bugfixes, see ChangeLog.)
 
 1.11: Set TCPLOCALIP to the real local address; document environment
