Use size_t and friends, rather than int.
The gid and uid variables now have a separate flag -- uid_t and gid_t
aren't guaranteed to be signed, and there isn't a safe sentinel value.
(0 would work but doesn't seem like a safe choice!)

--- a/NEWS
+++ b/NEWS
@@ -3,7 +3,9 @@
 Tidy up the documentation: remove duplicate copyright notices, and merge
 the ChangeLog and NEWS files together.
 
-Make onenetd work on platforms like ARM where char is unsigned.
+Make onenetd work on ARM: correct a number of type errors in the code,
+where it was using an inappropriate type to hold a return value from a
+library function.
 
 - onenetd 1.11
 
