Check that strdup didn't return NULL.
Spotted by clang's scan-build. We could use setenv instead if we didn't
mind onenetd not working on old Solaris any more.

--- a/NEWS
+++ b/NEWS
@@ -9,6 +9,9 @@ library function.
 
 Fix an uninitialised variable use (spotted by clang).
 
+Check that strdup hasn't failed when setting up the environment (spotted
+by clang).
+
 - onenetd 1.11
 
 Change the license from the GPL to the Expat license.
